[project]
name = "comfyui-auto-nodes-layout"
description = "A ComfyUI extension to apply better nodes layout algorithm to ComfyUI workflow (mostly for visualization purpose)"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/phineas-pta/comfyui-auto-nodes-layout"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-auto-nodes-layout"
Icon = ""
