[project]
name = "comfyui-auto-nodes-layout"
description = "a ComfyUI extension that applies an improved node layout algorithm to ComfyUI workflows, primarily for better visualization"
version = "0.0.2"
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/phineas-pta/comfyui-auto-nodes-layout"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "phineas-pta"
DisplayName = "comfyui-auto-nodes-layout"
Icon = ""
